--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -29,6 +29,18 @@
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.1091304297452-lspenpp11uqjnq60rf6mag820n5262o0</string>
+			</array>
+		</dict>
+	</array>
+
 	<key>NSCameraUsageDescription</key>
 	<string>Tots Paris needs camera access to let you take photos for your profile and scan product QR codes.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
