--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -36,6 +36,8 @@
 
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+	<key>FirebaseAppDelegateProxyEnabled</key>
+	<false/>
 
 	<key>CFBundleURLTypes</key>
 	<array>
@@ -59,6 +61,8 @@
 	<string>Tots Paris needs microphone access for voice-based search and video features.</string>
 	<key>NSAppleMusicUsageDescription</key>
 	<string>Tots Paris needs access to music library for media playback features.</string>
+	<key>NSUserTrackingUsageDescription</key>
+	<string>Tots Paris uses your data to provide a personalized shopping experience and relevant notifications.</string>
 
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Tots Paris uses your location to show you the nearest delivery options and store locations.</string>
