--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,7 @@ dependencies:
   flutter_stripe: ^12.1.1
   flutter_paypal: ^0.2.1
   flutter_tap_payment: ^0.2.1
-  flutter_sslcommerz: ^3.0.1
+  flutter_sslcommerz: 2.4.4
   razorpay_flutter: ^1.3.3
 
   # Utils & Media
