--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,4 +1,4 @@
-# FIXED: Increased from 13.0 to 15.0 to support Firebase 2026 requirements
+# Set the global platform to 15.0 for Firebase 2026 and iOS 26 SDK compatibility
 platform :ios, '15.0'
 
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -32,7 +32,6 @@ target 'Runner' do
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
   
-  # OneSignal linking remains the same
   pod 'OneSignalXCFramework', '>= 5.0.0', '< 6.0.0'
 
   target 'RunnerTests' do
@@ -45,9 +44,13 @@ post_install do |installer|
     flutter_additional_ios_build_settings(target)
     
     target.build_configurations.each do |config|
-      # FIXED: Changed from 13.0 to 15.0 to match the platform above
+      # 1. Ensure all pods use iOS 15.0
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
       
+      # 2. FIXED: Force Swift 5 to prevent Swift 6 "extraneous whitespace" errors
+      config.build_settings['SWIFT_VERSION'] = '5.0'
+      
+      # 3. Build & Stability fixes
       config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'i386 arm64'
       config.build_settings['ENABLE_BITCODE'] = 'NO'
       config.build_settings['ENABLE_USER_SCRIPT_SANDBOXING'] = 'NO'
