--- a/ios/Podfile
+++ b/ios/Podfile
@@ -32,6 +32,7 @@ target 'Runner' do
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
   
+  # OneSignal linking for modern iOS versions
   pod 'OneSignalXCFramework', '>= 5.0.0', '< 6.0.0'
 
   target 'RunnerTests' do
@@ -40,17 +41,24 @@ target 'Runner' do
 end
 
 post_install do |installer|
+  # 1. Force the Pods project-level deployment target to 15.0
+  installer.generated_projects.each do |project|
+    project.build_configurations.each do |config|
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
+    end
+  end
+
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
     
     target.build_configurations.each do |config|
-      # 1. Ensure all pods use iOS 15.0
+      # 2. Ensure every individual pod uses iOS 15.0
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
       
-      # 2. FIXED: Force Swift 5 to prevent Swift 6 "extraneous whitespace" errors
+      # 3. Force Swift 5 to prevent Swift 6 "extraneous whitespace" errors (SSLCommerz fix)
       config.build_settings['SWIFT_VERSION'] = '5.0'
       
-      # 3. Build & Stability fixes
+      # 4. Stability fixes for modern Xcode (16.0+)
       config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'i386 arm64'
       config.build_settings['ENABLE_BITCODE'] = 'NO'
       config.build_settings['ENABLE_USER_SCRIPT_SANDBOXING'] = 'NO'
