--- a/ios/Podfile
+++ b/ios/Podfile
@@ -31,6 +31,7 @@ target 'Runner' do
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
   
+  # Ensure OneSignal is linked correctly
   pod 'OneSignalXCFramework', '>= 5.0.0', '< 6.0.0'
 
   target 'RunnerTests' do
@@ -39,23 +40,21 @@ target 'Runner' do
 end
 
 post_install do |installer|
-  installer.generated_projects.each do |project|
-    project.build_configurations.each do |config|
-      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
-    end
-  end
-
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
     
     target.build_configurations.each do |config|
-      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
-      # Fix for SSLCommerz/Swift 6 spacing errors
+      # FIX 1: Bypass Swift 6 spacing errors (Required for flutter_sslcommerz)
       config.build_settings['SWIFT_VERSION'] = '5.0'
-      config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'i386 arm64'
-      config.build_settings['ENABLE_BITCODE'] = 'NO'
-      # Fix for Xcode 16+ PhaseScriptExecution failures
+      
+      # FIX 2: Set Deployment Target to 15.0 for Firebase 2026
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
+      
+      # FIX 3: Prevent PhaseScriptExecution failures on Codemagic/Xcode 16+
       config.build_settings['ENABLE_USER_SCRIPT_SANDBOXING'] = 'NO'
+      
+      # FIX 4: Architecture cleanup
+      config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'i386 arm64'
     end
   end
 end
