--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,43 +2,90 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+
+	<!-- App Identity -->
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+
 	<key>CFBundleDisplayName</key>
 	<string>Tots Paris</string>
+
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
+
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+
 	<key>CFBundleName</key>
 	<string>tots_paris</string>
+
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
+
 	<key>CFBundleShortVersionString</key>
 	<string>$(FLUTTER_BUILD_NAME)</string>
-	<key>CFBundleSignature</key>
-	<string>????</string>
+
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
+
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+
+	<!-- UI -->
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 
-	<key>UIBackgroundModes</key>
+	<!-- Orientation -->
+	<key>UISupportedInterfaceOrientations</key>
 	<array>
-		<string>remote-notification</string>
+		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 
-	<key>ITSAppUsesNonExemptEncryption</key>
-	<false/>
-	<key>FirebaseAppDelegateProxyEnabled</key>
-	<false/>
+	<key>UISupportedInterfaceOrientations~ipad</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
 
+	<!-- Firebase (CRITICAL FIX) -->
+	<key>FirebaseAppDelegateProxyEnabled</key>
+	<true/>
+
+	<!-- App Transport Security (CRITICAL FIX FOR API CRASH) -->
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+
+	<!-- Permissions -->
+	<key>NSCameraUsageDescription</key>
+	<string>Tots Paris needs camera access to take photos and scan QR codes.</string>
+
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Tots Paris needs access to your photos to upload and share images.</string>
+
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Tots Paris needs permission to save images to your photo library.</string>
+
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Tots Paris uses the microphone for voice and video features.</string>
+
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Tots Paris uses your location to show nearby delivery and store options.</string>
+
+	<key>NSUserTrackingUsageDescription</key>
+	<string>Tots Paris uses data to personalize your shopping experience.</string>
+
+	<!-- Google Sign-In -->
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -51,40 +98,16 @@
 		</dict>
 	</array>
 
-	<key>NSCameraUsageDescription</key>
-	<string>Tots Paris needs camera access to let you take photos for your profile and scan product QR codes.</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Tots Paris needs access to your photos so you can upload and share images within the app.</string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>Tots Paris needs permission to save photos to your library.</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>Tots Paris needs microphone access for voice-based search and video features.</string>
-	<key>NSAppleMusicUsageDescription</key>
-	<string>Tots Paris needs access to music library for media playback features.</string>
-	<key>NSUserTrackingUsageDescription</key>
-	<string>Tots Paris uses your data to provide a personalized shopping experience and relevant notifications.</string>
-
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Tots Paris uses your location to show you the nearest delivery options and store locations.</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Tots Paris uses your location to provide accurate order tracking and delivery updates.</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Tots Paris uses your location to keep you notified of your delivery status even when the app is in the background.</string>
-
-	<key>UISupportedInterfaceOrientations</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-	</array>
-	<key>UISupportedInterfaceOrientations~ipad</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationPortraitUpsideDown</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
+	<!-- Performance -->
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
+
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+
+	<!-- Encryption -->
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
+
 </dict>
 </plist>
